--- a/main.css
+++ b/main.css
@@ -16,6 +16,30 @@ body.animation-completed {
     overflow-y: auto;
 }
 
+body, #logo {
+    transition: all 2s ease-out;
+}
+
+#logo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.5);  /* scale the logo 4 times its size */
+    z-index: 1000;
+    opacity: 1;
+}
+
+body.loaded {
+    opacity: 1;
+}
+
+body.loaded #logo {
+    transition: all 2s ease-out;
+    transform: none;
+    z-index: 1;
+    opacity: 0;
+}
+
 h1, h2 {
     font-family: 'Nunito', sans-serif;
 }
