--- a/main.css
+++ b/main.css
@@ -17,14 +17,14 @@ body.animation-completed {
 }
 
 body, #logo {
-    transition: all 2s ease-out;
+    transition: opacity 1.5s ease-out;
 }
 
 #logo {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(0.5);  /* scale the logo 4 times its size */
+    transform: translate(-50%, -50%) scale(4);  /* scale the logo 4 times its size */
     z-index: 1000;
     opacity: 1;
 }
@@ -34,8 +34,7 @@ body.loaded {
 }
 
 body.loaded #logo {
-    transition: all 2s ease-out;
-    transform: none;
+    transform: translate(-50%, -50%); /* keep it centered but don't scale */
     z-index: 1;
     opacity: 0;
 }
